update: 升级到JDK21