@@ -1,157 +1,142 @@
-import org.jetbrains.changelog.Changelog
-import org.jetbrains.changelog.markdownToHTML
 import org.jetbrains.intellij.platform.gradle.TestFrameworkType
 
 plugins {
-    id("java") // Java support
-    alias(libs.plugins.kotlin) // Kotlin support
-    alias(libs.plugins.intelliJPlatform) // IntelliJ Platform Gradle Plugin
-    alias(libs.plugins.changelog) // Gradle Changelog Plugin
-    alias(libs.plugins.qodana) // Gradle Qodana Plugin
-    alias(libs.plugins.kover) // Gradle Kover Plugin
+    java
+    id("org.jetbrains.intellij.platform") version "2.0.1"
+    distribution
 }
 
-group = providers.gradleProperty("pluginGroup").get()
-version = providers.gradleProperty("pluginVersion").get()
+apply(from = "config.gradle.kts")
+// 获取 dependencies map
+val deps = rootProject.extra["dependencies"] as? Map<String, String> ?: error("Dependencies map not found in root project")
+val plugin = rootProject.extra["plugin"] as? Map<String, String> ?: error("plugin map not found in root project")
 
-// Set the JVM language level used to build the project.
-kotlin {
-    jvmToolchain(17)
+group = "com.xiaobaicai.plugin"
+version = "$rootProject.ext.plugin.version"
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
 }
 
-// Configure project's dependencies
 repositories {
     mavenCentral()
 
-    // IntelliJ Platform Gradle Plugin Repositories Extension - read more: https://plugins.jetbrains.com/docs/intellij/tools-intellij-platform-gradle-plugin-repositories-extension.html
+    // IntelliJ Platform Gradle Plugin Repositories Extension
     intellijPlatform {
         defaultRepositories()
     }
 }
 
-// Dependencies are managed with Gradle version catalog - read more: https://docs.gradle.org/current/userguide/platforms.html#sub:version-catalog
 dependencies {
-    testImplementation(libs.junit)
+    implementation(project(":plugin-core"))
+    implementation(project(mapOf("path" to ":plugin-agent", "configuration" to "shadow")))
 
-    // IntelliJ Platform Gradle Plugin Dependencies Extension - read more: https://plugins.jetbrains.com/docs/intellij/tools-intellij-platform-gradle-plugin-dependencies-extension.html
+    implementation(deps.getValue("hutool-all"))
+    implementation(deps.getValue("slf4j"))
+    annotationProcessor(deps.getValue("lombok"))
+    compileOnly(deps.getValue("lombok"))
+    testAnnotationProcessor(deps.getValue("lombok"))
+    testCompileOnly(deps.getValue("lombok"))
+
+    // 单测
+    testCompileOnly(deps.getValue("junit"))
+    testImplementation(deps.getValue("junit.jupiter.api"))
+    testImplementation(deps.getValue("junit.jupiter.engine"))
+
+    // IntelliJ Platform Gradle Plugin Dependencies Extension
     intellijPlatform {
-        create(providers.gradleProperty("platformType"), providers.gradleProperty("platformVersion"))
+        bundledPlugin("com.intellij.java")
 
-        // Plugin Dependencies. Uses `platformBundledPlugins` property from the gradle.properties file for bundled IntelliJ Platform plugins.
-        bundledPlugins(providers.gradleProperty("platformBundledPlugins").map { it.split(',') })
+        val type = providers.gradleProperty("platformType")
+        val version = providers.gradleProperty("platformVersion")
+        create(type.get(), version.get())
 
-        // Plugin Dependencies. Uses `platformPlugins` property from the gradle.properties file for plugin from JetBrains Marketplace.
-        plugins(providers.gradleProperty("platformPlugins").map { it.split(',') })
-
-        instrumentationTools()
         pluginVerifier()
         zipSigner()
+        instrumentationTools()
+
         testFramework(TestFrameworkType.Platform)
     }
 }
 
-// Configure IntelliJ Platform Gradle Plugin - read more: https://plugins.jetbrains.com/docs/intellij/tools-intellij-platform-gradle-plugin-extension.html
+// Configure IntelliJ Platform Gradle Plugin
 intellijPlatform {
+    buildSearchableOptions.set(false)
+    instrumentCode.set(true)
+    projectName.set(project.name)
     pluginConfiguration {
-        version = providers.gradleProperty("pluginVersion")
-
-        // Extract the <!-- Plugin description --> section from README.md and provide for the plugin's manifest
-        description = providers.fileContents(layout.projectDirectory.file("README.md")).asText.map {
-            val start = "<!-- Plugin description -->"
-            val end = "<!-- Plugin description end -->"
-
-            with(it.lines()) {
-                if (!containsAll(listOf(start, end))) {
-                    throw GradleException("Plugin description section not found in README.md:\n$start ... $end")
-                }
-                subList(indexOf(start) + 1, indexOf(end)).joinToString("\n").let(::markdownToHTML)
-            }
-        }
-
-        val changelog = project.changelog // local variable for configuration cache compatibility
-        // Get the latest available change notes from the changelog file
-        changeNotes = providers.gradleProperty("pluginVersion").map { pluginVersion ->
-            with(changelog) {
-                renderItem(
-                    (getOrNull(pluginVersion) ?: getUnreleased())
-                        .withHeader(false)
-                        .withEmptySections(false),
-                    Changelog.OutputType.HTML,
-                )
-            }
-        }
+        name.set(providers.gradleProperty("pluginName"))
+        version.set(providers.gradleProperty("pluginVersion"))
 
         ideaVersion {
-            sinceBuild = providers.gradleProperty("pluginSinceBuild")
-            untilBuild = providers.gradleProperty("pluginUntilBuild")
+            sinceBuild.set(providers.gradleProperty("pluginSinceBuild"))
+            untilBuild.set(providers.gradleProperty("pluginUntilBuild"))
         }
     }
-
-    signing {
-        certificateChain = providers.environmentVariable("CERTIFICATE_CHAIN")
-        privateKey = providers.environmentVariable("PRIVATE_KEY")
-        password = providers.environmentVariable("PRIVATE_KEY_PASSWORD")
-    }
-
     publishing {
-        token = providers.environmentVariable("PUBLISH_TOKEN")
-        // The pluginVersion is based on the SemVer (https://semver.org) and supports pre-release labels, like 2.1.7-alpha.3
-        // Specify pre-release label to publish the plugin in a custom Release Channel automatically. Read more:
-        // https://plugins.jetbrains.com/docs/intellij/deployment.html#specifying-a-release-channel
-        channels = providers.gradleProperty("pluginVersion").map { listOf(it.substringAfter('-', "").substringBefore('.').ifEmpty { "default" }) }
+        token.set(providers.environmentVariable("pluginToken"))
     }
 
     pluginVerification {
         ides {
+            local("/Applications/IntelliJ IDEA Ultimate.app")
             recommended()
         }
     }
 }
 
-// Configure Gradle Changelog Plugin - read more: https://github.com/JetBrains/gradle-changelog-plugin
-changelog {
-    groups.empty()
-    repositoryUrl = providers.gradleProperty("pluginRepositoryUrl")
+tasks.named<JavaExec>("runIde") {
+    jvmArgs("--add-exports", "java.base/jdk.internal.vm=ALL-UNNAMED")
 }
 
-// Configure Gradle Kover Plugin - read more: https://github.com/Kotlin/kotlinx-kover#configuration
-kover {
-    reports {
-        total {
-            xml {
-                onCheck = true
-            }
-        }
-    }
+tasks.test {
+    useJUnitPlatform()
 }
 
-tasks {
-    wrapper {
-        gradleVersion = providers.gradleProperty("gradleVersion").get()
-    }
+//所有项目配置
+allprojects {
+    group = "com.xiaobaicai.plugin"
+    version = plugin.getValue("version")
 
-    publishPlugin {
-        dependsOn(patchChangelog)
+    apply(plugin = "idea")
+    apply(plugin = "java")
+
+    java {
+        sourceCompatibility = JavaVersion.VERSION_21
+        targetCompatibility = JavaVersion.VERSION_21
     }
 }
 
-intellijPlatformTesting {
-    runIde {
-        register("runIdeForUiTests") {
-            task {
-                jvmArgumentProviders += CommandLineArgumentProvider {
-                    listOf(
-                        "-Drobot-server.port=8082",
-                        "-Dide.mac.message.dialogs.as.sheets=false",
-                        "-Djb.privacy.policy.text=<!--999.999-->",
-                        "-Djb.consents.confirmation.enabled=false",
-                    )
-                }
-            }
-
-            plugins {
-                robotServerPlugin()
-            }
-        }
+//所有子项目的通用配置
+subprojects {
+    repositories {
+        mavenCentral()
     }
+
+    dependencies {
+        implementation(deps.getValue("hutool-all"))
+        annotationProcessor(deps.getValue("lombok"))
+        compileOnly(deps.getValue("lombok"))
+        testAnnotationProcessor(deps.getValue("lombok"))
+        testCompileOnly(deps.getValue("lombok"))
+
+        // 单测
+        testCompileOnly(deps.getValue("junit"))
+        testImplementation(deps.getValue("junit.jupiter.api"))
+        testImplementation(deps.getValue("junit.jupiter.engine"))
+    }
+}
+
+tasks.withType<JavaCompile> {
+    options.encoding = "UTF-8"
+}
+
+tasks.withType<Javadoc> {
+    options.encoding = "UTF-8"
+}
+
+tasks.register("packAllTwice") {
+    dependsOn(":plugin-agent:packAgent")
+    dependsOn(":assemble")
 }
